samples/_failures_safe/1761291237_e2678c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6aa9eafa.c: In function ‘main’:
./samples/SAFE/__tmp_6aa9eafa.c:127:45: error: expected ‘)’ at end of input
  127 |                 int seconds = (int)(duration
      |                                    ~        ^
      |                                             )
./samples/SAFE/__tmp_6aa9eafa.c:127:17: error: expected declaration or statement at end of input
  127 |                 int seconds = (int)(duration
      |                 ^~~
./samples/SAFE/__tmp_6aa9eafa.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6aa9eafa.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6aa9eafa.c:127:17: error: expected declaration or statement at end of input
